# otel-demo-platform

./: .gitignore  CONFIG.md  README.md  consolidate_repos.py  create_isolate_branches.sh  docker-compose.hardened.yml  gradle.properties  settings.gradle.kts
agent/: README.md  pyproject.toml
agent/.venv_deps/: _otel_demo_agent.pth
agent/.venv_deps/fastapi-0.135.1.dist-info/: RECORD
agent/.venv_deps/jsonpatch-1.33.dist-info/: RECORD
agent/.venv_deps/jsonpointer-3.0.0.dist-info/: RECORD
agent/.venv_deps/ollama-0.6.1.dist-info/: RECORD
agent/.venv_deps/opentelemetry_exporter_otlp_proto_grpc-1.39.1.dist-info/: RECORD
agent/.venv_deps/opentelemetry_instrumentation_asgi-0.60b1.dist-info/: RECORD
agent/.venv_deps/opentelemetry_instrumentation_fastapi-0.60b1.dist-info/: RECORD
agent/.venv_deps/ormsgpack-1.12.2.dist-info/: RECORD
agent/.venv_deps/pygments-2.19.2.dist-info/: RECORD
agent/.venv_deps/pytest_asyncio-1.3.0.dist-info/: RECORD
agent/.venv_deps/pyyaml-6.0.3.dist-info/: RECORD
agent/.venv_deps/uvicorn-0.41.0.dist-info/: RECORD
agent/.venv_deps/uvloop-0.22.1.dist-info/: RECORD
agent/.venv_deps/watchfiles-1.1.1.dist-info/: RECORD
agent/.venv_deps/wrapt-1.17.3.dist-info/: RECORD
agent/.venv_deps/zstandard-0.25.0.dist-info/: RECORD
agent/agent/: __init__.py  chain.py  main.py  telemetry.py
agent/tests/: test_chain.py  test_main.py
ai-best-practices-example/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai-best-practices-example/Modular-ai-ml-pipeline-arch-kube/: DESIGN_PATTERN_LIBRARY.md  ai-ml-pipeline-architect.html  values.yaml
ai-best-practices-example/config/: __init__.py  settings.py
ai-best-practices-example/config/prompts/: chat_system.j2  chat_system.jinja2  index.yaml  rag_qa.jinja2  rag_system.j2  rag_user.j2
ai-best-practices-example/docs/: ARCHITECTURE.md
ai-best-practices-example/examples/: chat_cli.py  rag_demo.py
ai-best-practices-example/notebooks/: 01_quickstart.ipynb
ai-best-practices-example/src/ai_app/: __init__.py
ai-best-practices-example/src/ai_app/api/: __init__.py  app.py
ai-best-practices-example/src/ai_app/llm/: __init__.py  base.py  embeddings.py  openai_compat.py  token_utils.py
ai-best-practices-example/src/ai_app/prompts/: __init__.py  loader.py
ai-best-practices-example/src/ai_app/services/: __init__.py  chat.py  rag.py
ai-best-practices-example/tests/: conftest.py  test_integration.py  test_llm.py  test_prompts.py  test_services.py
llm-workflow-orchestrator/: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
llm-workflow-orchestrator/src/llm_workflow_orchestrator/: __init__.py  config.py  otel_setup.py  starter.py  worker.py
llm-workflow-orchestrator/src/llm_workflow_orchestrator/activities/: __init__.py  call_llm.py  call_tool.py
llm-workflow-orchestrator/tests/: __init__.py  test_activities.py  test_llm_client.py
(+398 files in other folders)
